Add travis tests for py38 and py39

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,14 @@ matrix:
       os: linux
       env:
         - PYTHON_VERSION="3.7"
+     - language: python
+      os: linux
+      env:
+        - PYTHON_VERSION="3.8"
+    - language: python
+      os: linux
+      env:
+        - PYTHON_VERSION="3.9"
 
 install:
   - sudo apt-get update
