--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ where = ["./src/"]
 include = ["pytrackmate*"]
 
 [tool.setuptools.dynamic]
-readme = { file = ["README.md"] }
+readme = { file = ["README.md"], content-type = "text/markdown" }
 
 [tool.setuptools_scm]
 
